--- a/src/component/product/Product.module.css
+++ b/src/component/product/Product.module.css
@@ -14,8 +14,57 @@ img {
 .product_text {
 	display: flex;
 	flex-flow: column;
-	align-items: center;
 	justify-content: space-evenly;
-	gap: 1rem;
-	padding: 1rem 0.5rem;
+	width: 100%;
+	text-align: left;
+	gap: 0.5rem;
+	padding: 1rem 5%;
+}
+
+.product_text h3 {
+	font-weight: bold;
+	font-size: 2rem;
+}
+
+.product_pricing {
+	display: flex;
+	justify-content: space-between;
+	text-align: center;
+}
+
+form {
+	display: flex;
+	justify-content: center;
+	font-size: 1.2rem;
+}
+
+input {
+	text-align: center;
+	border: none;
+}
+
+.cart_button {
+	width: 100%;
+	margin: 0 auto;
+	background-color: orangered;
+	padding: 1rem 0;
+	color: white;
+}
+
+s::before,
+s::after {
+	clip-path: inset(100%);
+	clip: rect(1px, 1px, 1px, 1px);
+	height: 1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+}
+s::before {
+	content: 'This price is no longer valid';
+}
+
+s::after {
+	content: 'Price has been reduced';
 }
