--- a/src/component/cart/Cart.module.css
+++ b/src/component/cart/Cart.module.css
@@ -24,7 +24,7 @@
 	gap: 1rem;
 }
 
-.cart_item {
+/* .cart_item {
 	display: flex;
 	flex-flow: row;
 	gap: 0.5rem;
@@ -41,4 +41,13 @@
 	padding: 0;
 	background-color: transparent;
 	margin: auto;
+} */
+
+.checkout_button {
+	width: 90%;
+	margin: 1rem auto;
+	background-color: orangered;
+	padding: 1rem;
+	color: white;
+	border-radius: 0.75rem;
 }
