--- a/src/component/cart/Cart.module.css
+++ b/src/component/cart/Cart.module.css
@@ -24,6 +24,13 @@
 	gap: 1rem;
 }
 
+.empty {
+	text-align: center;
+	list-style: none;
+	font-weight: 600;
+	color: gray;
+}
+
 /* .cart_item {
 	display: flex;
 	flex-flow: row;
