--- a/src/component/product/Product.module.css
+++ b/src/component/product/Product.module.css
@@ -17,7 +17,7 @@ img {
 	justify-content: space-evenly;
 	width: 100%;
 	text-align: left;
-	gap: 0.5rem;
+	gap: 1rem;
 	padding: 1rem 5%;
 }
 
@@ -36,6 +36,7 @@ form {
 	display: flex;
 	justify-content: center;
 	font-size: 1.2rem;
+	margin: 0.5rem;
 }
 
 input {
@@ -47,7 +48,7 @@ input {
 	width: 100%;
 	margin: 0 auto;
 	background-color: orangered;
-	padding: 1rem 0;
+	padding: 1.2rem 0;
 	color: white;
 	border-radius: 0.75rem;
 }
