--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,9 @@ body {
 	flex-flow: column;
 	min-width: 320px;
 	min-height: 100vh;
-	max-width: 100vw;
-	overflow-x: hidden;
+	max-width: 1440px;
+	/* max-width: 100vw; */
+	/* overflow-x: hidden; */
 }
 
 h1 {
