--- a/src/Layout/Headers/Header.module.css
+++ b/src/Layout/Headers/Header.module.css
@@ -3,7 +3,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	flex-flow: row;
-	width: 100vw;
+	width: 100%;
 	padding: 0.75rem 1.5rem;
 	z-index: 0;
 }
@@ -14,6 +14,14 @@ header {
 	z-index: inherit;
 }
 
+.item_num {
+	display: absolute;
+	left: 0;
+	z-index: 40;
+	bottom: 0;
+	border: 1px solid black;
+}
+
 .profile {
 	width: 2rem;
 }
@@ -22,8 +30,19 @@ header {
 	z-index: 60;
 }
 
+.desktop {
+	display: none;
+}
+
 @media (min-width: 700px) {
+	header {
+		padding: 2rem 0;
+		border-bottom: 1px solid lightgray;
+	}
 	.menu_button {
 		display: none;
+	}
+	.desktop {
+		display: block;
 	}
 }
