--- a/src/index.css
+++ b/src/index.css
@@ -91,15 +91,19 @@ h6 {
 
 a {
 	font-weight: 500;
-	color: #646cff;
+	color: black;
 	text-decoration: inherit;
 }
 a:hover {
 	color: #535bf2;
 }
 
+ul {
+	list-style: none;
+}
+
 body {
-	margin: 0;
+	margin: 0 auto;
 	display: flex;
 	flex-flow: column;
 	min-width: 320px;
