--- a/src/component/Products/Product.module.css
+++ b/src/component/Products/Product.module.css
@@ -2,7 +2,8 @@
 	display: flex;
 	flex-flow: column;
 	flex: 1;
-	height: 100vh;
+	height: fit-content;
+	justify-content: center;
 }
 
 .product_image ul {
@@ -26,9 +27,17 @@ img {
 	padding: 1rem 5%;
 }
 
+.product_text h4 {
+	color: var(--Orange);
+}
+
 .product_text h3 {
 	font-weight: bold;
 	font-size: 2rem;
+}
+
+.product_text p {
+	color: gray;
 }
 
 .product_pricing {
@@ -47,6 +56,7 @@ form {
 input {
 	text-align: center;
 	border: none;
+	background-color: var(--White);
 }
 
 .cart_button {
@@ -99,30 +109,62 @@ form button {
 	font-weight: 600;
 }
 
+.product_pricing {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	flex-flow: row;
+	flex-wrap: wrap;
+	gap: 0.5rem;
+}
+
+.product_pricing .price {
+	font-weight: bold;
+	font-size: 1.5rem;
+}
+
+.product_pricing .discount {
+	background-color: var(--Paleorange);
+	color: var(--Orange);
+	border-radius: 0.25rem;
+	padding: 0 0.25rem;
+	font-weight: bold;
+}
+
+.product_pricing s {
+	text-align: right;
+	flex: 1;
+	color: gray;
+}
+
 @media (min-width: 700px) {
 	.product {
 		flex-flow: row;
-		margin: auto;
+		/* margin: auto; */
+		width: 100%;
+		min-width: fit-content;
 		justify-content: center;
 		align-items: center;
 		gap: 2rem;
-		padding: 0 10%;
+		padding: 5% 10%;
 	}
 	.product_image {
 		flex: 1;
 	}
 	.product_image img {
 		border-radius: 1rem;
+		object-fit: contain;
 	}
 	.product_image ul {
 		display: flex;
 		flex-flow: row;
 		margin: 1rem auto;
 		justify-content: space-between;
+		gap: 1rem;
 	}
 
 	.product_image ul li {
-		width: 6rem;
+		width: 5rem;
 	}
 
 	.product_text {
@@ -142,5 +184,14 @@ form button {
 	.cart_button {
 		height: fit-content;
 		min-width: fit-content;
+		/* width: 100%; */
+		padding: 1.2rem;
+	}
+
+	.product_pricing s {
+		display: inline-block;
+		text-align: left;
+		width: 100%;
+		color: gray;
 	}
 }
