--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
 :root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
-
-	color-scheme: light dark;
-	background-color: rgba(255, 255, 255, 0.87);
-	color: #242424;
-
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
 	text-size-adjust: 100%;
+
+	/* Variables */
+	/* Primary */
+
+	--Orange: hsl(26, 100%, 55%);
+	--Paleorange: hsl(25, 100%, 94%);
+
+	/* Neutral */
+
+	--Verydarkblue: hsl(220, 13%, 13%);
+	--Darkgrayishblue: hsl(219, 9%, 45%);
+	--Grayishblue: hsl(220, 14%, 75%);
+	--Lightgrayishblue: hsl(223, 64%, 98%);
+	--White: hsl(0, 0%, 100%);
+	/* (with 75% opacity for lightbox background) */
+	--Black: hsl(0, 0%, 0%);
 }
 /*
   1. Use a more-intuitive box-sizing model.
@@ -27,22 +39,30 @@
 */
 * {
 	margin: 0;
+	padding: 0;
 }
 /*
   3. Allow percentage-based heights in the application
 */
 body {
 	height: 100%;
+	font-family: 'Kumbh Sans', sans-serif;
+	line-height: 1.5;
+	-webkit-font-smoothing: antialiased;
+	background-color: var(--Lightgrayishblue);
+	margin: 0 auto;
+	display: flex;
+	flex-flow: column;
+	min-width: 320px;
+	min-height: 100vh;
+	max-width: 1440px;
+	/* padding: 0 10%; */
 }
 /*
   Typographic tweaks!
   4. Add accessible line-height
   5. Improve text rendering
 */
-body {
-	line-height: 1.5;
-	-webkit-font-smoothing: antialiased;
-}
 /*
   6. Improve media defaults
 */
@@ -83,12 +103,6 @@ h6 {
 	isolation: isolate;
 }
 
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
 a {
 	font-weight: 500;
 	color: black;
@@ -102,17 +116,6 @@ ul {
 	list-style: none;
 }
 
-body {
-	margin: 0 auto;
-	display: flex;
-	flex-flow: column;
-	min-width: 320px;
-	min-height: 100vh;
-	max-width: 1440px;
-	/* max-width: 100vw; */
-	/* overflow-x: hidden; */
-}
-
 h1 {
 	font-size: 3.2em;
 	line-height: 1.1;
@@ -124,12 +127,8 @@ button {
 	color: black;
 }
 
-/* @media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
+@media (min-width: 700px) {
+	body {
+		padding: 0 10%;
 	}
-	a:hover {
-		color: #747bff;
-	}
-} */
+}
