--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,13 @@ button {
 	color: black;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 885px) and (max-width: 1075px) {
+	body {
+		padding: 0;
+	}
+}
+
+@media (min-width: 1076px) {
 	body {
 		padding: 0 10%;
 	}
