--- a/src/Layout/Headers/Header.module.css
+++ b/src/Layout/Headers/Header.module.css
@@ -23,7 +23,8 @@ header {
 }
 
 .profile {
-	width: 2rem;
+	width: 2.5rem;
+	border: 0.15rem solid transparent;
 }
 
 .menu_button {
@@ -34,19 +35,46 @@ header {
 	display: none;
 }
 
+.count {
+	position: fixed;
+	transform: translateY(-50%);
+	background-color: var(--Orange);
+	color: white;
+	padding: 0 0.5rem;
+	border-radius: 50%;
+	font-size: 0.75rem;
+}
+
 @media (min-width: 885px) {
 	header {
-		padding: 2rem 0;
 		border-bottom: 1px solid lightgray;
 		width: 100%;
+		align-items: center;
+		padding: 0 1.75rem;
+	}
+	header a {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 	.menu_button {
 		display: none;
 	}
 	.desktop {
-		display: block;
+		display: flex;
+		padding: 0;
+		height: 100%;
 	}
 	.container {
-		gap: 2rem;
+		/* gap: 2rem; */
+		height: 100%;
+	}
+	.profile:hover {
+		border: 0.15rem solid var(--Orange);
+		border-radius: 50%;
+		cursor: pointer;
+	}
+	button:hover {
+		cursor: pointer;
 	}
 }
