--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
 	--White: hsl(0, 0%, 100%);
 	/* (with 75% opacity for lightbox background) */
 	--Black: hsl(0, 0%, 0%);
+	--LightBox: hsla(0, 0%, 0%, 75%);
 }
 /*
   1. Use a more-intuitive box-sizing model.
