--- a/src/component/Products/Product.module.css
+++ b/src/component/Products/Product.module.css
@@ -17,6 +17,20 @@ img {
 	object-fit: contain;
 }
 
+.product_image li {
+	border-radius: 1.25rem;
+	border: 2px solid transparent;
+}
+
+.product_image li:hover,
+.product_image li:focus {
+	opacity: 0.75;
+}
+.product_image li:active {
+	border: 2px solid var(--Orange);
+	border-radius: 1.25rem;
+	opacity: 0.75;
+}
 .product_text {
 	display: flex;
 	flex-flow: column;
@@ -28,12 +42,13 @@ img {
 }
 
 .product_text h3 {
-	font-weight: bold;
-	font-size: 2rem;
+	color: var(--Orange);
 }
 
 .product_text h4 {
-	color: var(--Orange);
+	font-weight: bold;
+	font-size: 2rem;
+	line-height: 2.2rem;
 }
 
 .product_text p {
@@ -44,6 +59,7 @@ img {
 	display: flex;
 	justify-content: space-between;
 	text-align: center;
+	flex-wrap: wrap;
 }
 
 form {
@@ -87,7 +103,7 @@ s::after {
 }
 
 form {
-	background-color: lightgray;
+	background-color: var(--Grayishblue);
 	padding: 1rem;
 	display: flex;
 	flex-flow: row;
@@ -104,18 +120,20 @@ form input {
 }
 
 form button {
-	font-size: 1.2rem;
+	font-size: 2rem;
 	color: var(--Orange);
-	font-weight: 600;
+	font-weight: bold;
 }
 
 .product_pricing {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
-	flex-flow: row;
-	flex-wrap: wrap;
-	gap: 0.5rem;
+}
+
+.product_pricing > div {
+	display: flex;
+	gap: 1rem;
 }
 
 .product_pricing .price {
@@ -126,14 +144,16 @@ form button {
 .product_pricing .discount {
 	background-color: var(--Paleorange);
 	color: var(--Orange);
-	border-radius: 0.25rem;
-	padding: 0 0.25rem;
+	border-radius: 0.5rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 0.5rem;
+	width: fit-content;
 	font-weight: bold;
 }
 
 .product_pricing s {
-	text-align: right;
-	flex: 1;
 	color: gray;
 }
 
@@ -171,29 +191,40 @@ form button {
 	}
 	.product_text {
 		flex: 1;
+		padding: 0;
 	}
 	.form_container {
 		display: flex;
 		align-items: center;
 		gap: 1rem;
+		width: 100%;
 	}
 	.form_container form {
 		display: flex;
 		flex-flow: row;
 		justify-content: center;
 		min-width: fit-content;
+		height: fit-content;
+		padding: 0.5rem;
+		width: fit-content;
+	}
+	.form_container input {
+		width: 5rem;
 	}
 	.cart_button {
 		height: fit-content;
 		min-width: fit-content;
-		/* width: 100%; */
+		flex: 1;
+		width: 100%;
 		padding: 1.2rem;
 	}
 
-	.product_pricing s {
-		display: inline-block;
-		text-align: left;
-		width: 100%;
-		color: gray;
+	.product button:hover {
+		opacity: 0.75;
+	}
+
+	.product_pricing {
+		flex-flow: column;
+		align-items: flex-start;
 	}
 }
