--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,12 @@ button {
 	color: black;
 }
 
+.active {
+	border: 2px solid var(--Orange);
+	opacity: 0.75;
+	border-radius: 1.25rem;
+}
+
 @media (min-width: 885px) and (max-width: 1075px) {
 	body {
 		padding: 0;
